[package]
name = "rbsky"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "cli"
path = "src/bin/cli.rs"

[[bin]]
name = "daemon"
path = "src/bin/daemon.rs"

[[bin]]
name = "rbsky-nvim"
path = "src/bin/nvim.rs"


[dependencies]

surrealdb = { version = "1.3.0", features = ["kv-rocksdb"] }

# atrium-api = { path = "/home/sanhajio/development/pp/growth/examples/atrium/atrium-api" }
# atrium-xrpc = { path = "/home/sanhajio/development/pp/growth/examples/atrium/atrium-xrpc" }
# atrium-xrpc-client = { path = "/home/sanhajio/development/pp/growth/examples/atrium/atrium-xrpc-client" }
log = "0.4.21"
pretty_env_logger = "0.5.0"
env_logger = "0.11.3"

# Errors
anyhow = "1.0.80"
thiserror = "1.0"

# async in traits
# Can be removed once MSRV is at least 1.75.0.
async-trait = "0.1.68"

# CLI
clap = { version = "4.4.18", features = ["derive"] }
dirs = "5.0.1"



# DAG-CBOR codec and CAR format
cid = "0.11.1"
libipld-core = "0.16.0"
serde_ipld_dagcbor = "0.4.2"
chrono = "0.4"
langtag = "0.3"
regex = "1"
serde = { version = "1.0.197", features = ["derive"] }
serde_bytes = "0.11.9"
serde_json = "1.0.96"
serde_qs = "0.12"

# Networking
futures = { version = "0.3.30", default-features = false, features = ["alloc"] }
http = "0.2.12"
tokio = { version = "1.36", features = ["macros", "rt-multi-thread"], default-features = false }

# HTTP client integrations
isahc = "1.7.2"
reqwest = { version = "0.11.24", default-features = false }

# WebAssembly
wasm-bindgen-test = "0.3.41"
neovim-lib = "0.6.1"
simple-log = "1.6.0"
atrium-api = "0.18.6"
atrium-xrpc = "0.10.3"
atrium-xrpc-client = "0.5.0"
